Trying to manually publish instead now

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html><html lang="en"><head>
+<!doctype html>
+<html lang="en" data-critters-container>
+<head>
   <meta charset="utf-8">
   <title>Game Complex</title>
   <base href="https://singulocity.github.io/game-complex/">
@@ -7,6 +9,5 @@
 <style>html{height:100%;background-color:#1e1622}body{margin:0;height:100%}</style><link rel="stylesheet" href="styles.504265bc5cf1a377.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.504265bc5cf1a377.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.811a828d7e277163.js" type="module"></script><script src="polyfills.f2f5195534663de1.js" type="module"></script><script src="main.463cdae578b855d0.js" type="module"></script>
-
-</body></html>
+<script src="runtime.a9fba5b5b4df0fe0.js" type="module"></script><script src="polyfills.14f5b2a5f9a3104f.js" type="module"></script><script src="main.100af2a4d1ffdf0a.js" type="module"></script></body>
+</html>
