Update to angular 18

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Game Complex</title>
-  <base href="https://singulocity.github.io/game-complex/">
+  <base href=".">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>html{height:100%;background-color:#1e1622}body{margin:0;height:100%}</style><link rel="stylesheet" href="styles.504265bc5cf1a377.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.504265bc5cf1a377.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.a9fba5b5b4df0fe0.js" type="module"></script><script src="polyfills.14f5b2a5f9a3104f.js" type="module"></script><script src="main.100af2a4d1ffdf0a.js" type="module"></script></body>
+<script src="runtime.a9fba5b5b4df0fe0.js" type="module"></script><script src="polyfills.a7a01096b6c6f60d.js" type="module"></script><script src="main.57186f1b5928a359.js" type="module"></script></body>
 </html>
