Upgrade to angular 19. Hopefully I did this right

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="en" data-critters-container>
+<html lang="en" data-beasties-container>
 <head>
   <meta charset="utf-8">
   <title>Game Complex</title>
-  <base href=".">
+  <base href="https://singulocity.github.io/game-complex/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<style>html{height:100%;background-color:#1e1622}body{margin:0;height:100%}</style><link rel="stylesheet" href="styles.504265bc5cf1a377.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.504265bc5cf1a377.css"></noscript></head>
+<style>html{height:100%;background-color:#1e1622}body{margin:0;height:100%}</style><link rel="stylesheet" href="styles-N77VDFS4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-N77VDFS4.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.a9fba5b5b4df0fe0.js" type="module"></script><script src="polyfills.a7a01096b6c6f60d.js" type="module"></script><script src="main.57186f1b5928a359.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-AQI3F3MW.js" type="module"></script></body>
 </html>
