--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Game Complex</title>
-  <base href="https://singulocity.github.io/game-complex/">
+  <base href="https://lordsingulo.github.io/game-complex/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>html{height:100%;background-color:#1e1622}body{margin:0;height:100%}</style><link rel="stylesheet" href="styles-N77VDFS4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-N77VDFS4.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-AQI3F3MW.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-Z3UOFN3S.js" type="module"></script></body>
 </html>
