World wars card fix, hide console logs

--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 <style>html{height:100%;background-color:#1e1622}body{margin:0;height:100%}</style><link rel="stylesheet" href="styles-N77VDFS4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-N77VDFS4.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-Z3UOFN3S.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-RG2MW3DK.js" type="module"></script></body>
 </html>
